--- a/build.gradle
+++ b/build.gradle
@@ -16,10 +16,9 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'jakarta.annotation:jakarta.annotation-api:2.1.0'
-    implementation 'jakarta.authorization:jakarta.authorization-api:2.0.0'
-    implementation 'jakarta.interceptor:jakarta.interceptor-api:2.1.0'
-    implementation 'jakarta.authentication:jakarta.authentication-api:2.0.0'
+    implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
+    implementation 'javax.persistence:javax.persistence-api:2.2'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     testImplementation ('org.springframework.boot:spring-boot-starter-test'){
