--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,6 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
     implementation 'javax.persistence:javax.persistence-api:2.2'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
@@ -24,7 +23,10 @@ dependencies {
     testImplementation ('org.springframework.boot:spring-boot-starter-test'){
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
-    implementation(group:"com.h2database", name:"h2", version:"2.1.214")
+    implementation 'org.xerial:sqlite-jdbc:3.41.0.1'
+    implementation 'org.hibernate.orm:hibernate-community-dialects:6.1.7.Final'
+    implementation 'com.github.gwenn:sqlite-dialect:0.1.2'
+    implementation 'org.hibernate:hibernate-entitymanager:5.6.15.Final'
 }
 
 test {
